group 'rfx'
version '1.0'

apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'eclipse'

sourceCompatibility = 11 

version = '1.0'

repositories {
 	mavenLocal()
    mavenCentral()
    maven {
    	url = "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

dependencies {
    compile (  			
  			'io.vertx:vertx-core:3.8.5'	
			,'com.google.code.gson:gson:2.8.2'
			,'org.jsoup:jsoup:1.14.3'								
			,'org.apache.commons:commons-lang3:3.3.2'
			,'commons-net:commons-net:3.6'    		
			,'commons-io:commons-io:2.5'
			,'redis.clients:jedis:2.10.2'
			,'org.apache.httpcomponents:httpclient:4.5.13'
			,'com.google.guava:guava:23.6.1-jre' 
			,'org.yaml:snakeyaml:1.18'
			,'org.slf4j:slf4j-api:1.7.36'
			,'org.slf4j:slf4j-simple:1.7.36'      
			,'javax.activation:activation:1.1.1'  
    )
    testCompile (
    	'junit:junit:4.12'    	
    	,'org.mockito:mockito-core:1.+'	
    )
}

tasks.withType(Jar) {
	destinationDir = file("$rootDir/BUILD-OUTPUT")
}

ext.rfxCoreMasterManifest = manifest {
   attributes ('Implementation-Title': 'rfx.core.MasterNodeStarter', 
        			'Implementation-Version': version ,
        			'Main-Class': 'system.starter.MasterNodeStarter',
        			'Class-Path' : getClasspathStringJars() )
}

ext.rfxSupervisorManifest = manifest {
   attributes ('Implementation-Title': 'rfx.core.SupervisorNodeStarter', 
        			'Implementation-Version': version ,
        			'Main-Class': 'system.starter.SupervisorNodeStarter',
        			'Class-Path' : getClasspathStringJars() )
}

ext.rfxScheduledJobManifest = manifest {
   attributes ('Implementation-Title': 'rfx.core.ScheduledJobNodeStarter', 
        			'Implementation-Version': version ,
        			'Main-Class': 'system.starter.ScheduledJobNodeStarter',
        			'Class-Path' : getClasspathStringJars() )
}

// ------------ tasks for build src ---------------------


def getClasspathStringJars() {
	def baseFolder = 'deps/'
    def fileNames = []
    configurations.compile.each { File file -> fileNames.add(baseFolder + file.name) }
    
    def classpath = fileNames.join(" ; ")    
    return '. ; ' + classpath + ' ; '
}

uploadArchives {
    repositories {
       flatDir {
           dirs 'rfx-lib'
       }
    }
}

jar {	 
   	dependsOn classes
    from(sourceSets.main.output) {
        include "**"
    }    
    baseName = 'rfx-core'
    manifest = project.manifest {
        from rfxCoreMasterManifest
    }
}

// ------------ copy tasks for core deployment ---------------------
task rfxCopyRuntimeLibs(type: Copy) {  
  into "build/libs/deps"  
  from configurations.compile  
}

task rfxCopyConfigs(type: Copy) {  
  into "build/libs/configs"  
  from files('configs')
}

task rfxCopyResources(type: Copy) {  
  into "build/libs/resources"  
  from files('resources')
}

task rfxCopyToRelease(type: Copy) {
    from('build/libs')
    into('../releases/rfx-core')
    include('**')
}
// ------------------------------------------------------------------

task rfxCoreMasterJar(type: Jar) {	
	dependsOn classes
    from(sourceSets.main.output) {
        include "**"
    }

    baseName = 'rfx-core-master'
    manifest = project.manifest {
        from rfxCoreMasterManifest
    }
}

task rfxSupervisorJar(type: Jar) {	
	dependsOn classes
    from(sourceSets.main.output) {
        include "**"
    }

    baseName = 'rfx-supervisor'
    manifest = project.manifest {
        from rfxSupervisorManifest
    }
}

task rfxScheduledJobJar(type: Jar) {	
	dependsOn classes
    from(sourceSets.main.output) {
        include "**"
    }

    baseName = 'rfx-scheduled-job'
    manifest = project.manifest {
        from rfxScheduledJobManifest
    }
}

task sampleHelloWorker(type: Jar) {	
	dependsOn classes
    from(sourceSets.test.output) {
        include "**"
    }   
 
    baseName = 'sample.hello.HelloWorker'
    manifest {
   		attributes ('Implementation-Title': 'sample.hello.HelloWorker', 
        			'Implementation-Version': version ,
        			'Main-Class': 'sample.hello.HelloWorker',
        			'Class-Path' : getClasspathStringJars() + ' ./rfx-core-master.jar ; ' )
	}
}
